implementação da interface da CalculadoraComponent

--- a/src/app/calculadora/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora/calculadora.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
     <form>
       <div class="row">
         <div class="col-xs-8 col-sm-6 col-md-4">
@@ -8,7 +8,8 @@
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
-                  class="btn btn-danger kz-btn">C
+                  class="btn btn-danger kz-btn"
+                  (click)="limpar()">C
                 </button>
               </div>
               <div class="col-xs-9 col-sm-9 col-md-9">
@@ -17,6 +18,7 @@
                   class="form-control text-right kz-input-text"
                   id="display" 
                   name="display" 
+                  [value]="display"
                   readonly>
               </div>
             </div>
@@ -26,28 +28,32 @@
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn7">7
+                  id="btn7"
+                  (click)="adicionarNumero('7')">7
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn8">8
+                  id="btn8"
+                  (click)="adicionarNumero('8')">8
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn9">9
+                  id="btn9"
+                  (click)="adicionarNumero('9')">9
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn" 
-                  id="btnDivisao">/
+                  id="btnDivisao"
+                  (click)="definirOperacao('/')">/
                 </button>
               </div>
             </div>
@@ -57,28 +63,32 @@
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn4">4
+                  id="btn4"
+                  (click)="adicionarNumero('4')">4
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn5">5
+                  id="btn5"
+                  (click)="adicionarNumero('5')">5
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn6">6
+                  id="btn6"
+                  (click)="adicionarNumero('6')">6
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn"  
-                  id="btnMIltiplicacao">*
+                  id="btnMIltiplicacao"
+                  (click)="definirOperacao('*')">*
                 </button>
               </div>
             </div>
@@ -88,28 +98,32 @@
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn1">1
+                  id="btn1"
+                  (click)="adicionarNumero('1')">1
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn2">2
+                  id="btn2"
+                  (click)="adicionarNumero('2')">2
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn3">3
+                  id="btn3"
+                  (click)="adicionarNumero('3')">3
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn" 
-                  id="btnSubtracao">-
+                  id="btnSubtracao"
+                  (click)="definirOperacao('-')">-
                 </button>
               </div>
             </div>
@@ -119,28 +133,32 @@
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btn0">0
+                  id="btn0"
+                  (click)="adicionarNumero('0')">0
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-light kz-btn" 
-                  id="btnDecimal">.
+                  id="btnDecimal"
+                  (click)="adicionarNumero('.')">.
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-success kz-btn" 
-                  id="btnCalcular">=
+                  id="btnCalcular"
+                  (click)="calcular()">=
                 </button>
               </div>
               <div class="col-xs-3 col-sm-3 col-md-3">
                 <button 
                   type="button" 
                   class="btn btn-warning kz-btn" 
-                  id="btnSoma">+
+                  id="btnSoma"
+                  (click)="definirOperacao('+')">+
                 </button>
               </div>
             </div>
